[build-system]
requires = [
    "setuptools",
    "aiohttp",
]

[project]
name = "pybloxlink"
description = "An API wrapper for the Bloxlink API."
readme = { file = "README.md" content-type = "text/x-rst" }
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
authors = [{ name = "acatia" }]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Operating System :: Unix",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
]

[project.urls]
Documentation = "https://acatiadroid.github.io/pybloxlink"
GitHub = "https://github.com/acatiadroid/pybloxlink"
dynamic = ["version"]